Update WebUntisRequestManager.java
Replaced new URL(str) with URI(str).toURL()